...
        self.navigationController?.pushViewController(detailVC, animated: true)
    }
    
    private func showAlert(for business: Business) {
        let alert = UIAlertController(title: "View Yelp Page", message: "Please Select an Option", preferredStyle: .actionSheet)

        alert.addAction(UIAlertAction(title: "Open with Safari", style: .default , handler:{ (UIAlertAction)in
            self.goToSafari(url: business.url ?? "")
        }))

        alert.addAction(UIAlertAction(title: "Open with in WebView", style: .default , handler:{ (UIAlertAction)in
            self.goToWebView(business: business)
        }))
...
    
    
    // MARK: Helpers
    
    private func getLocationScopeData() -> [String] {
        
        var arrayOfLocations = ["Miami", "New York"]
        if locationProvider.locationAllowed {
            arrayOfLocations.insert("Current Location", at: 0)
        }
        
        return arrayOfLocations
    }
...
