//
//  WeedmapsChallengeUITests.swift
//  WeedmapsChallengeUITests
//
//  Created by Mark Anderson on 10/5/18.
//  Copyright © 2018 Weedmaps, LLC. All rights reserved.
//

import XCTest

class WeedmapsChallengeUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testOpenSafariFromSearchExist() {
        let app = XCUIApplication()
        app.searchFields.element.tap()
        app.searchFields.element.typeText("coffee")
        app.buttons["Miami"].tap()
        app.buttons["Search"].tap()
        app.collectionViews.cells.element(boundBy:0).tap()
        XCTAssertTrue(app.buttons["Open with Safari"].exists)
        
    }
}
